# jobset

./: .coderabbit.yaml  .gitignore  .golangci-kal.yml  .golangci.yaml  AGENTS.md  CONTRIBUTING.md  Dockerfile  Makefile  OWNERS  PROJECT  README.md  RELEASE.md  SECURITY_CONTACTS  cloudbuild.yaml  design_doc.md  examples  go.mod  go.sum  jobset.yaml  main.go  netlify.toml
api/python_api/: README.md  pyproject.toml
api/python_api/jobset_api/: __init__.py
docs/: README.md
sdk/python/: .coverage  .gitlab-ci.yml  .travis.yml  Dockerfile  README.md  pyproject.toml  pyvenv.cfg  requirements.txt  setup.py  test-requirements.txt  tox.ini
sdk/python/.openapi-generator/: FILES
sdk/python/docs/: IoK8sApiBatchV1JobSpec.md  IoK8sApiBatchV1JobTemplateSpec.md  IoK8sApiBatchV1PodFailurePolicy.md  IoK8sApiBatchV1PodFailurePolicyOnExitCodesRequirement.md  IoK8sApiBatchV1PodFailurePolicyOnPodConditionsPattern.md  IoK8sApiBatchV1PodFailurePolicyRule.md  IoK8sApiBatchV1SuccessPolicy.md  IoK8sApiBatchV1SuccessPolicyRule.md  IoK8sApiCoreV1AWSElasticBlockStoreVolumeSource.md  IoK8sApiCoreV1Affinity.md  IoK8sApiCoreV1AppArmorProfile.md  IoK8sApiCoreV1AzureDiskVolumeSource.md  IoK8sApiCoreV1AzureFileVolumeSource.md  IoK8sApiCoreV1CSIVolumeSource.md  IoK8sApiCoreV1Capabilities.md  IoK8sApiCoreV1CephFSVolumeSource.md  IoK8sApiCoreV1CinderVolumeSource.md  IoK8sApiCoreV1ClusterTrustBundleProjection.md  IoK8sApiCoreV1ConfigMapEnvSource.md  IoK8sApiCoreV1ConfigMapKeySelector.md  IoK8sApiCoreV1ConfigMapProjection.md  IoK8sApiCoreV1ConfigMapVolumeSource.md  IoK8sApiCoreV1Container.md  IoK8sApiCoreV1ContainerPort.md  IoK8sApiCoreV1ContainerResizePolicy.md  IoK8sApiCoreV1DownwardAPIProjection.md  IoK8sApiCoreV1DownwardAPIVolumeFile.md  IoK8sApiCoreV1DownwardAPIVolumeSource.md  IoK8sApiCoreV1EmptyDirVolumeSource.md  IoK8sApiCoreV1EnvFromSource.md  IoK8sApiCoreV1EnvVar.md  IoK8sApiCoreV1EnvVarSource.md  IoK8sApiCoreV1EphemeralContainer.md  IoK8sApiCoreV1EphemeralVolumeSource.md  IoK8sApiCoreV1ExecAction.md  IoK8sApiCoreV1FCVolumeSource.md  IoK8sApiCoreV1FlexVolumeSource.md  IoK8sApiCoreV1FlockerVolumeSource.md  (+121 more)
(+996 files in other folders)
