[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "jobset"
version = "0.2.0"
authors = [
    {name = "Kubernetes"},
]
description = "JobSet represents distributed jobs for ML/AI/HPC applications"
requires-python = ">=3.7"
readme = "README.md"
license = {text = "Apache"}
dependencies = [
    "certifi >= 14.05.14",
    "six >= 1.10", 
    "python_dateutil >= 2.5.3",
    "setuptools >= 21.0.0",
    "urllib3 >= 1.15.1",
    "kubernetes",
]
[project.optional-dependencies]
test = ["pytest>=6.2.5", "pytest-cov>=2.8.1", "pytest-randomly==1.2.3"]

[tool.setuptools]
packages = ["jobset", "jobset.api", "jobset.models"]